# disparPDF

./: .gitignore  CMakeLists.txt  README.ja.md  README.md  aboutform.cpp  batchcompare.cpp  batchcompare.h  commandlinemanager.h  confrontapdf_cz.ts  disparPDF_de.ts  disparPDF_es.ts  disparPDF_fr.ts  generic.cpp  generic.hpp  help.html  helpform.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  optionsform.cpp  resources.qrc  saveform.cpp  sequence_matcher.cpp  status.cpp  textitem.cpp
